Improve exception handling, docs, return types
RISDEV-8701